fix select item misalignment

--- a/docs/src/components/Select.css
+++ b/docs/src/components/Select.css
@@ -36,6 +36,7 @@
     display: grid;
     align-items: center;
     height: 1.75rem;
+    line-height: 1;
     white-space: nowrap;
     z-index: 0;
 
